bk_ida/gccida/c1/expand_builtin_frame_address
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_frame_address/src/builtins.c:3694:1: error: must use 'enum' tag to refer to type 'built_in_function'
built_in_function v4; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_frame_address/src/builtins.c:3741:30: error: use of undeclared identifier 'machine_mode'
result = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), result); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_frame_address/src/obj/builtins.o] Error 1
